--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<modules>
+		<module>stats-server</module>
+        <module>ewm-service</module>
+    </modules>
+
 	<build>
 		<pluginManagement>
 			<plugins>
