fix: delete tests and application from client library

--- a/stats-server/service/pom.xml
+++ b/stats-server/service/pom.xml
@@ -25,6 +25,10 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
