--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "8080:8080"
       - "8081:8081"
     environment:
-      - STATS_SERVICE_URL=http://server:9090
+      - STATS_SERVICE_URL=http://stats-server:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-main-db/explorewithmemain
 
   ewm-db:
