--- a/stats-server/service/src/main/resources/application.properties
+++ b/stats-server/service/src/main/resources/application.properties
@@ -11,7 +11,14 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
+#---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/explorewithme
 spring.datasource.username=root
 spring.datasource.password=root
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/ewm-stats-db;AUTO_SERVER=TRUE
+spring.datasource.username=test
+spring.datasource.password=test
